# guston

./: LICENSE  README.md  guston.cabal  wiz.cabal
app/: Main.hs
examples/: lat.gus  lat.wiz  member.gus  member.wiz  rember.gus  rember.wiz
golden-files/: lat.wiz  member.wiz  rember.gus.golden  rember.wiz
src/: Eval.hs  Parse.hs  Repl.hs  Syntax.hs
test/: Golden.hs  Spec.hs
test/Spec/: Eval.hs  Parse.hs
