name:                guston
version:             0.1.0.0
description:         A dialect of Lisp
homepage:            https://github.com/maxhallinan/guston#readme
license:             MIT
license-file:        LICENSE
author:              Max Hallinan
maintainer:          maxhallinan@riseup.net
copyright:           Max Hallinan
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:        base >= 4.7 && < 5
                      , containers
                      , directory
                      , filepath
                      , haskeline
                      , megaparsec
                      , mtl
                      , parser-combinators
  default-language:     Haskell2010
  ghc-options:          -Wall
  exposed-modules:      Eval
                      , Parse
                      , Repl
                      , Syntax
  hs-source-dirs:       src

test-suite spec
  build-depends:        base >= 4.7 && < 5
                      , guston
                      , checkers
                      , containers
                      , hspec
                      , hspec-expectations
                      , HUnit
                      , mtl
                      , QuickCheck
  default-language:     Haskell2010
  other-modules:        Spec.Eval
                      , Spec.Parse
  exposed-modules:      Spec
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0
  other-modules:        Spec.Parse

test-suite golden
  build-depends:        base >= 4.7 && < 5
                      , guston
                      , bytestring
                      , filepath
                      , Glob
                      , mtl
                      , tasty
                      , tasty-golden
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:       test
  main-is:              Golden.hs
  type:                 exitcode-stdio-1.0

executable guston
  build-depends:        base >= 4.7 && < 5
                      , guston
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:       app
  main-is:              Main.hs
