name:                wiz
version:             0.1.0.0
homepage:            https://github.com/maxhallinan/wiz#readme
license:             MIT
license-file:        LICENSE
author:              Max Hallinan
maintainer:          maxhallinan@riseup.net
copyright:           Max Hallinan
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  build-depends:        base >= 4.7 && < 5
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  exposed-modules:      Lib
  hs-source-dirs:       src

test-suite spec
  build-depends:        base >= 4.7 && < 5
                      , hspec
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0

test-suite golden
  build-depends:        base >= 4.7 && < 5
                      , bytestring
                      , filepath
                      , Glob
                      , tasty
                      , tasty-golden
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:       test
  main-is:              Golden.hs
  type:                 exitcode-stdio-1.0
  
executable wiz
  build-depends:        base >= 4.7 && < 5
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:       app
  main-is:              Main.hs
